--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -10,21 +10,20 @@
     </style>
 </head>
 
-<body ng-app="hello">
+<body ng-app="index">
 <div class="container">
-    <h1>Greeting</h1>
+    <h1>My TODO list</h1>
 
-    <p>
-        If this is formatted nicely and shows 'the ID is' below, angular and bootstrap are
-        working.   You need an endpoint at /resource for actual ID values to show up here, but
-    we don't worry about that now </p>
 
     <div ng-controller="home" ng-cloak class="ng-cloak">
-        <p>The ID is {{greeting.id}}</p>
-        <p>The content is {{greeting.content}}</p>
+        <div ng-repeat="item in listofitems">
+            <dl><dt>{{item.title}} ({{item.id}})</dt>
+                <dd>{{item.content}}</dd></dl>
+
+        </div>
     </div>
 </div>
 <script src="js/angular-bootstrap.js" type="text/javascript"></script>
-<script src="js/hello.js"></script>
+<script src="js/index.js"></script>
 </body>
 </html>
