[Finishes #103828034] Refactored placeholder data to be created on application boot. Created Item model and added checkboxes. Selection of checkboxes is posted to the controller and persisted.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -19,7 +19,12 @@
         <div ng-repeat="item in listofitems">
             <dl><dt>{{item.title}} ({{item.id}})</dt>
                 <dd>{{item.content}}</dd></dl>
-
+            <form name="form{{item.id}}">
+                <label>Done
+                    <input type="checkbox" ng-model="item.done"
+                           ng-true-value="'yes'" ng-false-value="'no'"
+                           ng-click='onDoneClick(item)'>
+                </label></form>
         </div>
     </div>
 </div>
