--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -14,21 +14,38 @@
 <div class="container">
     <h1>My TODO list</h1>
 
-
     <div ng-controller="home" ng-cloak class="ng-cloak">
-        <div ng-repeat="item in listofitems">
-            <dl><dt>{{item.title}} ({{item.id}})</dt>
-                <dd>{{item.content}}</dd></dl>
-            <form name="form{{item.id}}">
-                <label>Done
-                    <input type="checkbox" ng-model="item.done"
-                           ng-true-value="'yes'" ng-false-value="'no'"
-                           ng-click='onDoneClick(item)'>
-                </label></form>
-        </div>
+        <dl class="list-group">
+            <div ng-repeat="item in listofitems">
+                <div class="list-group-item">
+                    <dt>{{item.title}} ({{item.id}})</dt>
+                    <dd>{{item.content}}</dd>
+                    <form name="form{{item.id}}">
+                        <div>Done
+                            <input type="checkbox" ng-model="item.done"
+                                   ng-true-value="'yes'" ng-false-value="'no'"
+                                   ng-click='onDoneClick(item)'>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </dl>
     </div>
+
 </div>
 <script src="js/angular-bootstrap.js" type="text/javascript"></script>
 <script src="js/index.js"></script>
+<!-- <script>
+    angular.module('index', []).controller('home', function ($scope, $http) {
+        $scope.listofitems = [
+            {id: '1', title: 'hi', content: 'Hello World!', done: 'no'}, {
+            id: '2',
+            title: 'bye',
+            content: 'Bye!',
+            done: 'yes'
+        }];
+    });
+</script>
+-->
 </body>
 </html>
