Added glyphicons / font-awesome and some code in index to use it.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -20,8 +20,12 @@
                 <div class="list-group-item row">
                     <div ng-click="toggleContent(item.id)" class="col-md-6">
                         {{item.title}} ({{item.id}})
-                        <p ng-show="content[item.id]">
+                        <div ng-show="content[item.id]">
+                            <p>
                             {{item.content}}</p>
+                            <span class="glyphicon glyphicon-pencil" ng-click="goedit(item.id)"></span>
+                            <span class="glyphicon glyphicon-trash"></span>
+                        </div>
                     </div>
                     <form name="form{{item.id}}">
                         <div class="col-md-6">Done
