Back end changes and test for new todo item; also small front end changes.
Button still needs styling.  An error is shown in the console on submit of edit, but not solved here.

[finishes #103828036 ]

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -44,7 +44,7 @@
         <div ng-show="content[item.id] && editorEnabled">
             <form name="formedit{{item.id}}" ng-submit="saveedit(item)" role="form">
                 <div class="form-group">
-                    <input type="text" ng-model="item.titleField" class="form-control"><br>
+                    <input type="text" ng-model="item.titleField" class="form-control" autofocus="true"><br>
                     <textarea type="text" ng-model="item.contentField" class="form-control"></textarea><br>
                     <input type="submit" id="submit" value="Submit" class="form-control btn btn-warning">
                 </div>
