--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
-<html>
+<html ng-app="index">
 <head>
     <title>Hello AngularJS</title>
     <link href="css/angular-bootstrap.css" rel="stylesheet">
     <link href="css/local.css" rel="stylesheet">
 </head>
 
-<body ng-app="index">
+<body>
 <div class="container">
     <h1>My TODO list</h1>
 
@@ -19,10 +19,9 @@
         </div>
     </div>
 
+    <a href="/logoutbutton">Logout</a>
 
-</div>
-
-<script type="text/ng-template" id="itemform.html">
+    <script type="text/ng-template" id="itemform.html">
     <div class="list-group-item row">
         <!-- not editing: -->
         <form name="form{{item.id}}" ng-hide="editorEnabled && item.id == currentEditItem">
@@ -52,6 +51,7 @@
         </div>
 
     </div>
+
 </script>
 <script src="js/angular-bootstrap.js" type="text/javascript"></script>
 <script src="js/index.js"></script>
@@ -67,7 +67,7 @@
     });
 </script>
 -->
-
+</div>
 
 </body>
 </html>
