--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,7 +8,7 @@
 
 <body>
 <div class="container">
-    <h1>My TODO list</h1>
+    <h1>TODO list</h1>
 
     <div ng-controller="home" ng-cloak class="ng-cloak">
         <div ng-click="plusbutton()">Plus</div>
