Partially implemented showing user id in UI

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,9 +8,8 @@
 
 <body>
 <div class="container">
-    <h1>TODO list</h1>
-
     <div ng-controller="home" ng-cloak class="ng-cloak">
+        <h1>TODO list -{{springdoUserName}}-</h1>  <!-- this does not resolve for some reason -->
         <div ng-click="plusbutton()">Plus</div>
         <div class="list-group">
             <div ng-repeat="item in listofitems">
